--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-SITE_NAME_HEADER=GG Network
+SITE_NAME_HEADER=GG Network - Manifest
 SITE_MAIN_LANGUAGE=en
 SITE_BASE_URL=
 SHOW_CREATED_TIMESTAMP=true
@@ -6,8 +6,8 @@ TIMESTAMP_FORMAT=dd.MM.yyyy h:mm a
 SHOW_UPDATED_TIMESTAMP=true
 NOTE_ICON_DEFAULT=
 NOTE_ICON_TITLE=true
-NOTE_ICON_FILETREE=true
-NOTE_ICON_INTERNAL_LINKS=true
+NOTE_ICON_FILETREE=false
+NOTE_ICON_INTERNAL_LINKS=false
 NOTE_ICON_BACK_LINKS=true
 STYLE_SETTINGS_CSS=
 STYLE_SETTINGS_BODY_CLASSES=
